--- a/タスクの振り方.md
+++ b/タスクの振り方.md
@@ -1,4 +1,4 @@
 タスクの振り方
 
 1. タスクを振る相手の力量を考える前に自分だったらどれぐらいの期限で出来るかを見積もって、その見積もりをベースに相手の力量を踏まえて振るようにする。
-ただし、ある程度タスクを振る相手を引っ張るような形にしないと相手のペースありきのスケジュールになってしまうので、ある程度期限日は相手の力量よりワンランク上あたりで設定する。もし相手が期限日通りにできない場合は、自分が巻き取るなどして調整するようにした方がいい
+ただし、ある程度タスクを振る相手を引っ張るような形にしないと相手のペースありきのスケジュールになってしまうので、期限日は相手の力量よりワンランク上あたりで設定するように意識する。もし相手が期限日通りにできない場合は、自分が巻き取るなどして調整するようにした方がいい
